<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Global Strings -->
    <string name="app_name">Legends254</string>
    <string name="app_id">599440406802394</string>
    <string name="cancel">Cancel</string>
     
    <!-- Login Page -->
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="facebook_login">Login using facebook</string>
    
    <!-- Register Page -->
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="facebook">Connect using facebook</string>
   
    
</resources>
